--- a/stack-overflow-survey.ipynb
+++ b/stack-overflow-survey.ipynb
@@ -4,7 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Stack Overflow Survey Analysis"
+    "## Stack Overflow Survey Analysis\n",
+    "\n",
+    "I want to use Stack Overflow data of 2017 and 2018 Survey. to answer blow question:\n",
+    "\n",
+    "1. What language the data scientists use most?\n",
+    "2. How many people are using Julia? Is it getting more attention? \n",
+    "3. TensorFlow vs. Pytorch, which one is more attractive to data scientists?\n",
+    "4. Data scientists  which are using TensorFlow vs. which are using Pytorch, who have higher salary?"
    ]
   },
   {
