add 2016 survey data

--- a/stack-overflow-survey.ipynb
+++ b/stack-overflow-survey.ipynb
@@ -79,7 +79,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'2016 Stack Overflow Survey Responses.csv.gz'\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "! ls ./data/developer_survey_2016"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +110,8 @@
    ],
    "source": [
     "data_2018 = pd.read_csv('./data/developer_survey_2018/survey_results_public.csv.gz', compression=\"gzip\")\n",
-    "data_2017 = pd.read_csv('./data/developer_survey_2017/survey_results_public.csv.gz', compression=\"gzip\")\n"
+    "data_2017 = pd.read_csv('./data/developer_survey_2017/survey_results_public.csv.gz', compression=\"gzip\")\n",
+    "data_2016 = pd.read_csv('./data/developer_survey_2016/2016 Stack Overflow Survey Responses.csv.gz', compression=\"gzip\")\n"
    ]
   },
   {
@@ -108,22 +126,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "((98855, 129), (51392, 154))"
+       "((98855, 129), (51392, 154), (56030, 66))"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data_2018.shape, data_2017.shape"
+    "data_2018.shape, data_2017.shape, data_2016.shape"
    ]
   },
   {
@@ -789,6 +807,264 @@
    ],
    "source": [
     "data_2017.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>collector</th>\n",
+       "      <th>country</th>\n",
+       "      <th>un_subregion</th>\n",
+       "      <th>so_region</th>\n",
+       "      <th>age_range</th>\n",
+       "      <th>age_midpoint</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>self_identification</th>\n",
+       "      <th>occupation</th>\n",
+       "      <th>...</th>\n",
+       "      <th>important_sameend</th>\n",
+       "      <th>important_newtech</th>\n",
+       "      <th>important_buildnew</th>\n",
+       "      <th>important_buildexisting</th>\n",
+       "      <th>important_promotion</th>\n",
+       "      <th>important_companymission</th>\n",
+       "      <th>important_wfh</th>\n",
+       "      <th>important_ownoffice</th>\n",
+       "      <th>developer_challenges</th>\n",
+       "      <th>why_stack_overflow</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1888</td>\n",
+       "      <td>Facebook</td>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>Southern Asia</td>\n",
+       "      <td>Central Asia</td>\n",
+       "      <td>20-24</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Programmer</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4637</td>\n",
+       "      <td>Facebook</td>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>Southern Asia</td>\n",
+       "      <td>Central Asia</td>\n",
+       "      <td>30-34</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Developer; Engineer; Programmer</td>\n",
+       "      <td>Mobile developer - iOS</td>\n",
+       "      <td>...</td>\n",
+       "      <td>This is somewhat important</td>\n",
+       "      <td>This is very important</td>\n",
+       "      <td>This is very important</td>\n",
+       "      <td>I don't care about this</td>\n",
+       "      <td>This is somewhat important</td>\n",
+       "      <td>This is somewhat important</td>\n",
+       "      <td>I don't care about this</td>\n",
+       "      <td>I don't care about this</td>\n",
+       "      <td>Unrealistic expectations; Interacting with non...</td>\n",
+       "      <td>To get help for my job; Because I can't do my ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>11164</td>\n",
+       "      <td>Facebook</td>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>Southern Asia</td>\n",
+       "      <td>Central Asia</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>21378</td>\n",
+       "      <td>Facebook</td>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>Southern Asia</td>\n",
+       "      <td>Central Asia</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Engineer</td>\n",
+       "      <td>DevOps</td>\n",
+       "      <td>...</td>\n",
+       "      <td>I don't care about this</td>\n",
+       "      <td>This is somewhat important</td>\n",
+       "      <td>This is very important</td>\n",
+       "      <td>This is very important</td>\n",
+       "      <td>I don't care about this</td>\n",
+       "      <td>I don't care about this</td>\n",
+       "      <td>This is very important</td>\n",
+       "      <td>This is somewhat important</td>\n",
+       "      <td>Corporate policies; Interacting with non-techn...</td>\n",
+       "      <td>To get help for my job; Beacause I love to learn</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>30280</td>\n",
+       "      <td>Facebook</td>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>Southern Asia</td>\n",
+       "      <td>Central Asia</td>\n",
+       "      <td>&gt; 60</td>\n",
+       "      <td>65.0</td>\n",
+       "      <td>Prefer not to disclose</td>\n",
+       "      <td>Developer; Engineer; Programmer; Sr. Developer...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 66 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0 collector      country   un_subregion     so_region age_range  \\\n",
+       "0        1888  Facebook  Afghanistan  Southern Asia  Central Asia     20-24   \n",
+       "1        4637  Facebook  Afghanistan  Southern Asia  Central Asia     30-34   \n",
+       "2       11164  Facebook  Afghanistan  Southern Asia  Central Asia       NaN   \n",
+       "3       21378  Facebook  Afghanistan  Southern Asia  Central Asia       NaN   \n",
+       "4       30280  Facebook  Afghanistan  Southern Asia  Central Asia      > 60   \n",
+       "\n",
+       "   age_midpoint                  gender  \\\n",
+       "0          22.0                    Male   \n",
+       "1          32.0                    Male   \n",
+       "2           NaN                     NaN   \n",
+       "3           NaN                  Female   \n",
+       "4          65.0  Prefer not to disclose   \n",
+       "\n",
+       "                                 self_identification              occupation  \\\n",
+       "0                                         Programmer                     NaN   \n",
+       "1                    Developer; Engineer; Programmer  Mobile developer - iOS   \n",
+       "2                                                NaN                     NaN   \n",
+       "3                                           Engineer                  DevOps   \n",
+       "4  Developer; Engineer; Programmer; Sr. Developer...                     NaN   \n",
+       "\n",
+       "                         ...                          \\\n",
+       "0                        ...                           \n",
+       "1                        ...                           \n",
+       "2                        ...                           \n",
+       "3                        ...                           \n",
+       "4                        ...                           \n",
+       "\n",
+       "            important_sameend           important_newtech  \\\n",
+       "0                         NaN                         NaN   \n",
+       "1  This is somewhat important      This is very important   \n",
+       "2                         NaN                         NaN   \n",
+       "3     I don't care about this  This is somewhat important   \n",
+       "4                         NaN                         NaN   \n",
+       "\n",
+       "       important_buildnew  important_buildexisting  \\\n",
+       "0                     NaN                      NaN   \n",
+       "1  This is very important  I don't care about this   \n",
+       "2                     NaN                      NaN   \n",
+       "3  This is very important   This is very important   \n",
+       "4                     NaN                      NaN   \n",
+       "\n",
+       "          important_promotion    important_companymission  \\\n",
+       "0                         NaN                         NaN   \n",
+       "1  This is somewhat important  This is somewhat important   \n",
+       "2                         NaN                         NaN   \n",
+       "3     I don't care about this     I don't care about this   \n",
+       "4                         NaN                         NaN   \n",
+       "\n",
+       "             important_wfh         important_ownoffice  \\\n",
+       "0                      NaN                         NaN   \n",
+       "1  I don't care about this     I don't care about this   \n",
+       "2                      NaN                         NaN   \n",
+       "3   This is very important  This is somewhat important   \n",
+       "4                      NaN                         NaN   \n",
+       "\n",
+       "                                developer_challenges  \\\n",
+       "0                                                NaN   \n",
+       "1  Unrealistic expectations; Interacting with non...   \n",
+       "2                                                NaN   \n",
+       "3  Corporate policies; Interacting with non-techn...   \n",
+       "4                                                NaN   \n",
+       "\n",
+       "                                  why_stack_overflow  \n",
+       "0                                                NaN  \n",
+       "1  To get help for my job; Because I can't do my ...  \n",
+       "2                                                NaN  \n",
+       "3   To get help for my job; Beacause I love to learn  \n",
+       "4                                                NaN  \n",
+       "\n",
+       "[5 rows x 66 columns]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_2016.head()"
    ]
   },
   {
